--- a/front-end/cmd/web/templates/footer.partial.gohtml
+++ b/front-end/cmd/web/templates/footer.partial.gohtml
@@ -1,7 +1,10 @@
 {{define "footer"}}
-    <footer>
-        <div>
-            <p> Copyright </p>
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <hr>
+                <small class="text-muted">Copyright &copy; rohitR</small>
+            </div>
         </div>
-    </footer>
+    </div>
 {{end}}
