--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -1,18 +1,76 @@
 {{template "base" .}}
 
 {{define "content" }}
-<div id="output">
-    <span class="text-muted">Output here...</span>
-</div>
-<div>
-    <pre id="payload">
-        <span>Nothing sent yet...</span>
-    </pre>
-</div>
-<div>
-<h4> Received </h4>
-<pre id="received">
-<span class="text-muted">Nothing received yet...</span>
-</pre>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="mt-5">Test Go microservices</h1>
+                <hr>
+                <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test broker</a>
+                <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
+                    <span class="text-muted">Output shows here...</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <h4 class="mt-5">Sent</h4>
+                <div class="mt-1" style="outline: 1px solid silver; padding: 2em;">
+                    <pre id="payload"><span class="text-muted">Nothing sent yet...</span></pre>
+                </div>
+            </div>
+            <div class="col">
+                <h4 class="mt-5">Received</h4>
+                <div class="mt-1" style="outline: 1px solid silver; padding: 2em;">
+                    <pre id="received"><span class="text-muted">Nothing received yet...</span></pre>
+                </div>
+            </div>
+        </div>
+    </div>
+{{end}}
+
+{{define "js"}}
+    <script>
+        let brokerBtn = document.getElementById("brokerBtn");
+        let output = document.getElementById("output");
+        let sent = document.getElementById("payload")
+        let received = document.getElementById("received")
+
+        brokerBtn.addEventListener("click", function () {
+            started();
+
+            const body = {
+                method: 'POST',
+            }
+
+            // send request to main entrypoint for microservices
+            fetch("http:\/\/localhost:8080", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = "empty post request";
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        console.log(data.error)
+                    } else {
+                        output.innerHTML += `<br><strong>Response from broker service</strong>: ${data.message}`;
+                    }
+                    ended();
+                })
+                .catch((error) => {
+                    output.innerHTML += "<br><br><strong>Error: " + error;
+                })
+        })
+
+        function ended() {
+            let now = new Date();
+            output.innerHTML += `<br><strong class="text-danger">Ended:</strong> ${now}...<br>`;
+        }
+
+        function started() {
+            let now = new Date();
+            output.innerHTML = `<strong class="text-success">Started:</strong> ${now}...<br><em>Sending request...</em>`;
+            received.innerHTML = `<span class="text-muted">Nothing received yet...</span>`;
+        }
+
+    </script>
 {{end}}
