--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -7,6 +7,7 @@
                 <h1 class="mt-5">Test Go microservices</h1>
                 <hr>
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test broker</a>
+                <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test Auth broker</a>
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -32,9 +33,48 @@
 {{define "js"}}
     <script>
         let brokerBtn = document.getElementById("brokerBtn");
+        let authBrokerBtn = document.getElementById("authBrokerBtn");
         let output = document.getElementById("output");
         let sent = document.getElementById("payload")
         let received = document.getElementById("received")
+
+        authBrokerBtn.addEventListener("click", function () {
+            started();
+
+            const payload = {
+                action: "auth",
+                auth: {
+                    email: "admin@example.com",
+                    password: "verysecret",
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json")
+
+            const body = {
+                method: "POST",
+                body: JSON.stringify(payload),
+                header: headers,
+            }
+            // send request to main entrypoint for microservices
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        console.log(data.error)
+                        output.innerHTML += `<br><strong>Error</strong>: ${data.error}`;
+                    } else {
+                        output.innerHTML += `<br><strong>Response from Broker service</strong>: ${data.message}`;
+                    }
+                    ended();
+                })
+                .catch((error) => {
+                    output.innerHTML += "<br><br><strong>Error: " + error;
+                })
+        })
 
         brokerBtn.addEventListener("click", function () {
             started();
@@ -44,7 +84,7 @@
             }
 
             // send request to main entrypoint for microservices
-            fetch("http:\/\/localhost:8080", body)
+            fetch("http://localhost:8080", body)
                 .then((response) => response.json())
                 .then((data) => {
                     sent.innerHTML = "empty post request";
