logging service done, unable to check logs in mongo db

--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -63,7 +63,7 @@
                     if (data.error) {
                         output.innerHTML += `<br><strong>Error</strong>: ${data.error}`;
                     } else {
-                        output.innerHTML += `<br><strong>Response from Broker service</strong>: ${data.message}`;
+                        output.innerHTML += `<br><strong>Response from Broker service to LOG</strong>: ${data.message}`;
                     }
                     ended();
                 })
