--- a/front-end/cmd/web/templates/test.page.gohtml
+++ b/front-end/cmd/web/templates/test.page.gohtml
@@ -9,6 +9,7 @@
                 <a id="brokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test broker</a>
                 <a id="authBrokerBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Test Auth broker</a>
                 <a id="logBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Log Button</a>
+                <a id="mailBtn" class="btn btn-outline-secondary" href="javascript:void(0)">Mail Button</a>
                 <div id="output" class="mt-5" style="outline: 1px solid silver; padding: 2em;">
                     <span class="text-muted">Output shows here...</span>
                 </div>
@@ -39,6 +40,44 @@
         let output = document.getElementById("output");
         let sent = document.getElementById("payload")
         let received = document.getElementById("received")
+        let mailBtn = document.getElementById("mailBtn")
+
+        mailBtn.addEventListener("click", function () {
+            const payload = {
+                action: "mail",
+                mail: {
+                    from: "me@example.com",
+                    to: "you@example.com",
+                    message: "Hello Mail Microservice",
+                }
+            }
+
+            const headers = new Headers();
+            headers.append("Content-Type", "application/json")
+
+            const body = {
+                method: "POST",
+                body: JSON.stringify(payload),
+                header: headers,
+            }
+            // send request to main entrypoint for microservices
+            fetch("http:\/\/localhost:8080/handle", body)
+                .then((response) => response.json())
+                .then((data) => {
+                    sent.innerHTML = JSON.stringify(payload, undefined, 4);
+                    received.innerHTML = JSON.stringify(data, undefined, 4);
+                    if (data.error) {
+                        console.log(data.error)
+                        output.innerHTML += `<br><strong>Error</strong>: ${data.error}`;
+                    } else {
+                        output.innerHTML += `<br><strong>Response from Broker service</strong>: ${data.message}`;
+                    }
+                    ended();
+                })
+                .catch((error) => {
+                    output.innerHTML += "<br><br><strong>Error: " + error;
+                })
+        })
 
         logBtn.addEventListener("click", function(){
             const payload = {
